# dict

./: CMakeLists.txt  README.md  run.sh
include/: dict.hpp  dictresult.hpp  expect.hpp  result.hpp
src/: dict.cpp  dictptr.cpp  dictresult.cpp  expect.cpp  ptr.cpp  result.cpp
test/: concepttest.cpp  dicttest.cpp  expecttest.cpp  include.json  included.json  includetest.cpp  monadtest.cpp  ptrtest.cpp
